Cleaned up some files, added README, added images.

--- a/server/public_html/protected/index.html
+++ b/server/public_html/protected/index.html
@@ -8,5 +8,14 @@
   </head>
   <body>
    <h1>This boring html file is to show authentication worked.</h1>
+   <h2>Now just hit the back button, I did not style this page.</h2>
+   <button onclick="goBack()">Back</button>
+
+
+   <script>
+    function goBack() {
+      window.history.back();
+    }
+  </script>
   </body>
 </html>
